# DetectAndAvoid

./: .gitignore  README.md
OpticalFlow/: CMakeLists.txt  README.md
OpticalFlow/FuzzyCMeans/: fuzzy_clustering.cpp  fuzzy_clustering.hpp
OpticalFlow/src/: main.cpp  main_cuda.cpp  main_opticalLucas.cpp
OpticalFlow/src/.svn/: all-wcprops  entries
OpticalFlow/src/.svn/text-base/: main.cpp.svn-base
OpticalFlow/src/bkp/: background.cpp  background.hpp  main.cpp  shadowCounter.cpp  shadowCounter.hpp
RF DETR/: rfdetr_test.py
SAM/: main.py  realtime_groundSAM.ipynb  setupSAM.txt
Sky_Seg/: docs.txt  imagem_teste.py  skyseg.py  video_teste.py  video_teste_f16.py
Yolo/Yolo11/: alert_system_medium.py  alert_system_small.py  dependencias.txt  detection_only.py  detection_only_yolo_nano.py  detection_only_yolo_small.py  main.py  tensor_rt_detection_only.py  test_track_with_id.py  yolo_to_TensorRT.py
Yolo/Yolo11/Docs/: erro_csrt.txt
